@@ -113,11 +113,11 @@ readings:<br>
 <ol>
   <li>"Heuristically Optimized Trade-offs: A New Paradigm for Power
 Laws in the Internet" (<a
- href="cgi.di.uoa.gr/%7Eelias/publications/paper-fkp02.pdf">fkp02.pdf</a>)</li>
+ href="http://cgi.di.uoa.gr/%7Eelias/publications/paper-fkp02.pdf">fkp02.pdf</a>)</li>
   <li>"Degree distributions of the FKP network model" (<a
- href="research.microsoft.com/%7Ejchayes/Papers/FKPdgrees.pdf">icalp03.pdf</a>)</li>
+ href="http://research.microsoft.com/%7Ejchayes/Papers/FKPdgrees.pdf">icalp03.pdf</a>)</li>
   <li>"On Power-Law Relationships of the Internet Topology" (<a
- href="www.cs.ucr.edu/%7Emichalis/CAMERA.ps">fff.ps</a>)</li>
+ href="htp://www.cs.ucr.edu/%7Emichalis/CAMERA.ps">fff.ps</a>)</li>
 </ol>
 The model should generate a topology that exibits a power-law bound on
 the in-degree sequence of nodes; but, as atated in paper [2],&nbsp;
